[fix]修复collapse-item的展开图标样式问题

--- a/src/components/Collapse/style/collapse-item.less
+++ b/src/components/Collapse/style/collapse-item.less
@@ -17,7 +17,7 @@
     align-items: center;
     gap: 8px;
     .yc-collapse-item-header-icon {
-      color: rgb(107, 119, 133);
+      // color: ;
       position: absolute;
     }
     .yc-collapse-item-header-title {
